#pragma once

enum class PropertyStatus { BANK, OWNED, MORTGAGED };
